--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Simulation2D)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Simulation2D main.cpp objects.h vectors.h)
+add_executable(Simulation2D main.cpp objects.hpp vectors.hpp constants.hpp)
 
 set(SFML_STATIC_LIBRARIES TRUE)
 set(SFML_DIR C:/SFML/lib/cmake/SFML)
